--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -1,19 +1,19 @@
 ja:
   activerecord:
     models:
-      blog: ブログ
       user: ユーザー
       favorite: お気に入り
       feed: 投稿
     attributes:
-      blog:
-        title: タイトル
-        content: 内容
       user:
-        title: タイトル
         name: 名前
         email: メールアドレス
+        image: 画像
         current_password: 現在のパスワード
         password: パスワード
         password_confirmation: 確認用パスワード
         remember_me: ログインを記憶
+      feed:
+        image: 画像
+        title: タイトル
+        content: 内容
